<resources>
    <string name="app_name">SmartCarParkAdmin</string>
    <string name="compound">Compound</string>
    <string name="compound_list">Compound List</string>
    <string name="SuspensionList">Suspension List</string>
    <string name="platenumber">enter plate number</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="issue">Issue</string>
    <string name="cd_home">Home</string>
    <string name="cd_compound">compound</string>
    <string name="cd_notification">notification</string>
    <string name="cd_profile">profile</string>
    <string name="fui_password_hint">enter password</string>
    <string name="fui_email_hint">enter email</string>
    <string name="xxxx">XXXX</string>
    <string name="contact_number">Contact Number :</string>
    <string name="status">Status</string>
    <string name="logout">Logout</string>
    <string name="amount">Amount</string>
    <string name="locations">Location</string>
    <string name="carplate">CarPlate</string>
    <string name="date">Date</string>
    <string name="view_announcement">View Announcement</string>
    <string name="sort">Sort</string>
    <string name="add_announcement">Add Anouncement</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="register">Register</string>
    <string name="add">Add</string>
    <string name="enterName">Enter Name</string>
    <string name="enterEmail">Enter Email</string>
    <string name="contactnum">Contact Number :</string>
    <string name="enterPass">Enter Password</string>
    <string name="renterPass">Re-enter Password</string>
    <string name="name">Name :</string>
    <string name="email">Email :</string>
    <string name="password">Password :</string>
    <string name="title">Enter Title</string>
    <string name="description">Enter Description</string>
    <string name="update">Update</string>
    <string name="titles">Title</string>
    <string name="descriptions">Description</string>
    <string name="welcome">Welcome !</string>
    <string name="blockK">Block K</string>
    <string name="blockV">Block V</string>
    <string name="report">Show Compound Report</string>
    <string name="location">Location</string>


</resources>